--- a/assets/css/rex-landing.css
+++ b/assets/css/rex-landing.css
@@ -314,6 +314,7 @@ body::before {
 .location span {
   font-size: 20px;
   font-weight: 500;
+  text-decoration: none;
   color: rgba(255, 255, 255, 1);
 }
 
