--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -201,6 +201,130 @@ body::before {
   color: #ffff;
 }
 
+/* Event Cards */
+
+.event-container{
+  gap: 20px;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 5;
+}
+
+.bento-grid {
+  display: grid;
+  gap: 10px;
+  grid-template-areas:
+      "box1 box2"
+      "box1 box3";
+  grid-template-columns: 1fr 1fr; 
+  grid-template-rows: 3fr 1fr;
+  margin-bottom: 30px;
+  padding: 5%;
+  width: 100vw; 
+  
+}
+
+.box1 {
+  grid-area: box1;
+  padding: 0;
+  position: relative;
+  width: 100%;
+  padding-top: 100%; 
+}
+
+.image-fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain; 
+  border-radius: 10px;
+}
+
+
+.box2 {
+  grid-area: box2;
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(0, 255, 98, 0.53);
+  color: #e2e1e1dc;
+  height: 100%;
+}
+
+.box2 h2 {
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+}
+
+.box2 p {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.bento-grid .box3 {
+  grid-area: box3;
+  background-color: #06b1364f;
+  padding: 0px;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 253, 253, 0.644);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
+
+.ticket-a {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  color: white;
+  background-color: #06b1364f;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  padding: 30px;
+}
+
+.ticket-a:hover{
+  background-color: #f0f0e4;
+  color: #06b136;
+}
+
+
+@media (max-width: 900px) {
+  .bento-grid {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+        "box1"
+        "box2"
+        "box3";
+    grid-template-rows: auto auto auto;
+}
+
+.box1, .box2, .box3 {
+    width: 100%;
+}
+
+.box2, .box3 {
+    padding: 30px;
+}
+}
+
 /* Footer */
 
 .footer {
@@ -323,6 +447,10 @@ body::before {
 }
 
 @media only screen and (max-width: 900px) {
+  .blob{
+    display: none;
+  }
+  
   .footer {
     padding: 1rem; 
   }
@@ -335,6 +463,10 @@ body::before {
 }
 
 @media only screen and (max-width: 480px) {
+  .blob{
+    display: none;
+  }
+
   .footer {
     padding: 0.8rem; 
   }
@@ -346,6 +478,10 @@ body::before {
 
 /* Media Queries */
 @media only screen and (max-width: 768px) {
+  .blob{
+    display: none;
+  }
+
   .footer {
     flex-direction: column;
     text-align: center;
