index event button

--- a/assets/css/get-tickets.css
+++ b/assets/css/get-tickets.css
@@ -17,7 +17,7 @@
   box-shadow: 0 0 0 white;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
-  margin-top: 20px;
+  margin: 10px;
 }
 
 .star-1 {
@@ -175,7 +175,7 @@ button:hover .star-6 {
   box-shadow: 0 0 0 white;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
-  margin-top: 20px;
+  margin: 10px;
 }
 
 .ca-button:hover {
@@ -252,3 +252,97 @@ button:hover .star-6 {
 .fil1 {
   fill: #06b137;
 }
+
+/* Events */
+
+.ev-button {
+  position: relative;
+  padding: 12px 35px;
+  background: rgb(2, 172, 160);
+  font-family: "Ubuntu", sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  color: white;
+  border: 3px solid rgb(2, 172, 160);
+  border-radius: 8px;
+  box-shadow: 0 0 0 white;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.ev-button:hover {
+  background: transparent;
+  color: white;
+  box-shadow: 0 0 25px white;
+}
+
+.ev-button:hover .star-1 {
+  position: absolute;
+  top: -80%;
+  left: -30%;
+  width: 25px;
+  height: auto;
+  filter: drop-shadow(0 0 10px #fffdef);
+  z-index: 2;
+}
+
+.ev-button:hover .star-2 {
+  position: absolute;
+  top: -25%;
+  left: 10%;
+  width: 15px;
+  height: auto;
+  filter: drop-shadow(0 0 10px #fffdef);
+  z-index: 2;
+}
+
+.ev-button:hover .star-3 {
+  position: absolute;
+  top: 55%;
+  left: 25%;
+  width: 5px;
+  height: auto;
+  filter: drop-shadow(0 0 10px #fffdef);
+  z-index: 2;
+}
+
+.ev-button:hover .stars {
+  display: block;
+  filter: drop-shadow(0 0 10px #fffdef);
+}
+
+.ev-button:hover .star-4 {
+  position: absolute;
+  top: 30%;
+  left: 80%;
+  width: 8px;
+  height: auto;
+  filter: drop-shadow(0 0 10px #fffdef);
+  z-index: 2;
+}
+
+.ev-button:hover .star-5 {
+  position: absolute;
+  top: 25%;
+  left: 115%;
+  width: 15px;
+  height: auto;
+  filter: drop-shadow(0 0 10px #fffdef);
+  z-index: 2;
+}
+
+.ev-button:hover .star-6 {
+  position: absolute;
+  top: 5%;
+  left: 60%;
+  width: 5px;
+  height: auto;
+  filter: drop-shadow(0 0 10px #fffdef);
+  z-index: 2;
+}
+
+.fil0 {
+  fill: #f0f0f0;
+}
+
