--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -197,8 +197,8 @@ body::before {
 }
 
 .event-title {
-  font-size: 24px;
-  color: #ffff;
+  font-size: 50px;
+  color: #f0f0f0e4;
 }
 
 /* Event Cards */
