--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -156,14 +156,14 @@
 .nav-menu {
   display: flex;
   flex-direction: column;
-  margin-top: 20vh;
+  margin-top: auto;
   padding: clamp(2rem, 6vw, 8rem);
 }
 
 .link-menu {
   color: #ffffff5f;
   font-family: "Ubuntu", sans-serif;
-  font-size: clamp(2rem, 6vw, 8rem);
+  font-size: clamp(2rem, 4vw, 8rem);
   font-weight: 600;
   text-decoration: none;
   position: relative;
