--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -156,8 +156,8 @@
 .nav-menu {
   display: flex;
   flex-direction: column;
-  margin-top: auto;
-  padding: clamp(2rem, 6vw, 8rem);
+  margin: auto;
+  padding: clamp(0rem, 12vw, 8rem);
 }
 
 .link-menu {
