--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -153,8 +153,8 @@ body::before {
 .nav-menu {
   display: flex;
   flex-direction: column;
-  margin-top: auto;
-  padding: clamp(2rem, 6vw, 8rem);
+  margin: auto;
+  padding: clamp(0rem, 12vw, 8rem);
 }
 
 .link-menu {
