--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -422,6 +422,10 @@ body::before {
   text-decoration: underline;
 }
 
+.footer-map{
+  padding: 10px;
+}
+
 @media only screen and (max-width: 768px) {
   #blob {
     display: none;
@@ -435,7 +439,8 @@ body::before {
   }
 
   .footer-left,
-  .footer-right {
+  .footer-right,
+  .footer-map {
     width: 100%;
     margin-bottom: 1.5rem;
     margin-left: 0;
@@ -490,7 +495,8 @@ body::before {
   }
 
   .footer-left,
-  .footer-right {
+  .footer-right,
+  .footer-map {
     width: 100%;
     margin-bottom: 1.5rem;
     margin-left: 0;
