--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -339,7 +339,11 @@ body::before {
   text-decoration: underline;
 }
 
-;
+.footer-map{
+  padding: 10px;
+}
+
+
 @media only screen and (max-width: 768px) {
   .footer {
       flex-direction: column;
@@ -347,10 +351,14 @@ body::before {
       padding: 1rem;
   }
 
-  .footer-left, .footer-right {
-      width: 100%;
-      margin-bottom: 1.5rem;
+  .footer-left,
+  .footer-right,
+  .footer-map {
+    width: 100%;
+    margin-bottom: 1.5rem;
+    margin-left: 0;
   }
+
 
   .social-icons {
       justify-content: center;
