--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -304,7 +304,7 @@
     display: flex;
     gap: 20px;
     margin-bottom: 2rem;
-    margin-left: 3rem;
+    margin-left: 0rem;
   }
   
   .social-icons a .fab {
@@ -504,7 +504,7 @@
     }
   
     .content {
-      margin: 0;
+      margin: auto;
       padding: 0; 
     }
   
