--- a/assets/css/rex-landing.css
+++ b/assets/css/rex-landing.css
@@ -237,14 +237,14 @@ body::before {
 /* Robot Background Image */
 .bg-robot {
   position: absolute;
-  margin-right: 3rem;
+  margin-right: 8rem;
   margin-top: 3rem;
   top: 5rem;
   right: 2rem;
   width: 30rem;
   height: 30rem;
   /* min-height: calc(100vh - var(--footer-height)); */
-  background-image: url("../images/bg_robot.png");
+  background-image: url("../images/bg_robot_fin.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right bottom;
