--- a/assets/css/get-tickets.css
+++ b/assets/css/get-tickets.css
@@ -254,3 +254,26 @@ button:hover .star-6 {
   fill: #06b137;
 }
 
+/* Popup */
+
+.get-tickets-popup {
+  position: relative;
+  padding: 12px 35px;
+  background: var(--color);
+  font-family: "Ubuntu", sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  color: white;
+  border: 3px solid var(--color);
+  border-radius: 8px;
+  box-shadow: 0 0 0 #000000;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.get-tickets-popup:hover {
+  background: transparent;
+  color: #06b137;
+  box-shadow: 0 0 25px black;
+}
