--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -29,32 +29,6 @@ body::before {
   z-index: -1; 
 }
 
-/* Blob and Blur Effects */
-#blob {
-  background-color: white;
-  height: 24vmax;
-  aspect-ratio: 1;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
-  border-radius: 50%;
-  background: linear-gradient(to right, aquamarine, mediumpurple);
-  filter: blur(12vmax);
-  animation: rotate 20s infinite;
-  opacity: 0.8;
-  z-index: 0;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  justify-content: space-between;
-  position: relative;
-  z-index: 2;
-}
-
 .header {
   padding: 2rem 3rem;
   display: flex;
@@ -182,7 +156,7 @@ body::before {
   border-bottom-color: #F0F0E4;
 }
 
-/* Image Slider */
+
 
 .hero-section {
   display: flex;
@@ -191,56 +165,56 @@ body::before {
   flex-direction: column;
   padding: 50px;
   text-align: center;
-  position: relative;
-  z-index: 3; 
+  position: relative; 
 }
 
 .page-heading {
   text-align: left;
-  font-size: 2rem;
+  font-size: 60px;
   color: white;
+  margin: 50px;
+  z-index: 10;
 }
 
-.slider-master {
-  width: 85vmin;
+/* Image Slider */
+.gallery-track {
   position: relative;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 0.25rem;
+  padding: 0.25rem;
+  will-change: transform;
+  z-index: 3;
+}
+
+.card {
+  height: 400px;
   overflow: hidden;
-  border: 2px solid #01f647;
-  border-radius: 8px;
-  box-shadow: 10px 25px 30px rgba(1, 246, 71, 0.3);
+
+  & .card-image-wrapper {
+    height: 135%;
+    will-change: transform;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+} 
+
+@media (width < 800px) {
+  .gallery-track {
+    grid-template-columns: repeat(2,1fr);
+  }
 }
 
-.wrapper {
-  width: 100%;
-  display: flex;
-  animation: slide 20s infinite;
+@media (width < 550px) {
+  .gallery-track {
+    grid-template-columns: repeat(1,1fr);
+  }
 }
 
-@keyframes slide {
-  0% { transform: translateX(0); }
-  5.5% { transform: translateX(0); }    
-  15% { transform: translateX(-100%); }
-  20% { transform: translateX(-100%); }  
-  27.5% { transform: translateX(-200%); }
-  32.5% { transform: translateX(-200%); }  
-  40% { transform: translateX(-300%); }
-  45% { transform: translateX(-300%); }  
-  52.5% { transform: translateX(-400%); }
-  57.5% { transform: translateX(-400%); }  
-  65% { transform: translateX(-500%); }
-  70% { transform: translateX(-500%); }  
-  77.5% { transform: translateX(-600%); }
-  82.5% { transform: translateX(-600%); }  
-  95% { transform: translateX(-700%); }
-  100% { transform: translateX(-700%); } 
-}
-
-
-.image {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-}
 
 /* Footer */
 
@@ -368,9 +342,6 @@ body::before {
 
 ;
 @media only screen and (max-width: 768px) {
-  #blob{
-    display: none;
-  }
 
   .footer-left,
   .footer-right,
@@ -396,13 +367,6 @@ body::before {
       padding: 20px;
   }
   
-  .slider-master {
-      width: 90vw; ;
-  }
-
-  .page-heading {
-      font-size: 1.8rem;
-  }
 
 }
 
