--- a/assets/css/get-tickets.css
+++ b/assets/css/get-tickets.css
@@ -256,7 +256,7 @@ button:hover .star-6 {
 
 /* Popup */
 
-.get-tickets-popup {
+/* .get-tickets-popup {
   position: relative;
   padding: 12px 35px;
   background: var(--color);
@@ -276,4 +276,4 @@ button:hover .star-6 {
   background: transparent;
   color: #06b137;
   box-shadow: 0 0 25px black;
-}
+} */
